--- a/clicky-memory-game/src/index.css
+++ b/clicky-memory-game/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: 'Berkshire Swash', cursive;
   color: #f0f3f3;
-  background: url('/assets/images/holi1.jpeg');
+  background: url('/Memory_Game/assets/images/holi1.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
 }
